examples/bad/divbyzero.hid
/* Program will end with an error caused by trying to divide something by 0 */

declare a;
declare b;
b = ^^a;
print (b/a);
